--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,15 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.bekvon.bukkit</groupId>
   <artifactId>Parties</artifactId>
-  <version>1.4</version>
+  <version>1.4.1</version>
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
   <dependencies>
     <dependency>
       <groupId>org.bukkit</groupId>
       <artifactId>Bukkit</artifactId>
-      <version>1.2.5-R4.0</version>
+      <version>[1.2.5-R4.0,1.2.5-R4.1-SNAPSHOT]</version>
     </dependency>
   </dependencies>
 </project>
