--- a/pom.xml
+++ b/pom.xml
@@ -2,15 +2,21 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.bekvon.bukkit</groupId>
   <artifactId>Parties</artifactId>
-  <version>1.4.1</version>
+  <version>1.4.2-dev</version>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
+  <repositories>
+    <repository>
+      <id>bukkit</id>
+      <url>http://repo.bukkit.org/content/repositories/releases/</url>
+    </repository>
+  </repositories>
   <dependencies>
     <dependency>
       <groupId>org.bukkit</groupId>
-      <artifactId>Bukkit</artifactId>
-      <version>[1.2.5-R4.0,1.2.5-R4.1-SNAPSHOT]</version>
+      <artifactId>bukkit</artifactId>
+      <version>1.3.2-R0.1</version>
     </dependency>
   </dependencies>
 </project>
